WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46722
[Qt] ProcessLauncherHelper should not leave stray socket files in /tmp.
https://bugs.webkit.org/show_bug.cgi?id=46722
Summary
[Qt] ProcessLauncherHelper should not leave stray socket files in /tmp.
Andras Becsi
Reported
2010-09-28 07:36:08 PDT
In the ProcessLauncherHelper class m_server (QLocalServer) creates socket files in /tmp, but because m_server is not properly closed on exit these socket files remain in /tmp. Close m_server on exit to remove the socket file.
Attachments
proposed fix
(1.91 KB, patch)
2010-09-28 07:42 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2010-09-28 07:42:16 PDT
Created
attachment 69048
[details]
proposed fix
Andras Becsi
Comment 2
2010-09-28 07:51:09 PDT
Comment on
attachment 69048
[details]
proposed fix Clearing flags on attachment: 69048 Committed
r68515
: <
http://trac.webkit.org/changeset/68515
>
Andras Becsi
Comment 3
2010-09-28 07:51:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug