2010-09-28  Andras Becsi  <abecsi@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] ProcessLauncherHelper should not leave stray socket files in /tmp.
        https://bugs.webkit.org/show_bug.cgi?id=46722

        * UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
        (WebKit::ProcessLauncherHelper::~ProcessLauncherHelper): close the socket.
        (WebKit::ProcessLauncherHelper::ProcessLauncherHelper): delete the helper on exit.


Canonical link: https://commits.webkit.org/59202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68515 268f45cc-cd09-0410-ab3c-d52691b4dbfc